--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- 웹페이지 보이지는 않지만, 필요한 설정을 해두는 곳이에요.
-             우리가 집을 위해 미리 생각 해놓은 것을 적어두는 곳이라고 할 수 있죠!-->
+    
         <meta charset=“UTF-8” />
         <meta http-equiv=“X-UA-Compatible” content=“IE=edge” />
         <meta name=“viewport” content=“width=device-width, initial-scale=1.0” />
-        <meta property=“og:title” content=“Mindh의 링크” />
-        <meta property=“og:description” content=“처음은 언제나 설레이는 법이죠.” />
+        <meta property=“og:title” content=“Mindh_321의 링크” />
+        <meta property=“og:description” content=“처음은 언제나 설레는 법이죠.” />
         <meta property=“og:image” content=“공유할 이미지” />
-        <title>르탄이 - 프로필 링크</title>  
+        <title>mindh_321의 링크</title>  
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 *        {
@@ -92,7 +91,7 @@
         <div class="wrap">
             <div class="profile"></div>
             <h1 class="main"> Mindh</h1>
-            <P class="sub">배움은 항상 설레이는법</P>
+            <P class="sub">처음은 언제나 설레는 법이죠</P>
             <a target="_blank" href="https://www.instagram.com/mindh_321/">일상스타그램</a>
             <a target="_blank" href="https://www.instagram.com/be_write_/">글스타그램</a>
             <a target="_blank" href="https://youtu.be/rDd1ZmMjwQs">추천노래.01</a>
